fix(addon-commerce): keep thumbnails icons visible in disabled content

--- a/projects/styles/components/textfield.less
+++ b/projects/styles/components/textfield.less
@@ -174,7 +174,7 @@ tui-textfield:where(*&) {
             opacity: 1;
         }
 
-        tui-icon {
+        & > .t-content > tui-icon {
             display: none;
         }
     }
